feat: registro y listado de eventos